[gd_scene load_steps=5 format=3 uid="uid://c8wmvj0o1odct"]

[ext_resource type="Script" path="res://player.gd" id="1_ern5e"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_rau0i"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtpvy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1ldr"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ern5e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_rau0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rtpvy")

[node name="SelfDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PlayerCollision" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_s1ldr")

[node name="Health" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -10.0
offset_top = -16.0
offset_right = 9.0
offset_bottom = -12.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="body_entered" from="SelfDamage" to="." method="_on_self_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
